Remove the /cases endpoint (#143)
* Remove the /cases endpoint

* Fix formatting

* [ci skip] auto patch increment
skip-checks: true

* Remove /cases from API.md

* Code review comments

* Formatting fix

* increment version
