# openapi.yaml
@@ -171,41 +171,6 @@ paths:
         404:
           description: Not Found
           content: {}
-  /cases:
-    get:
-      tags:
-        - case-endpoint
-      summary: find and return all cases in the database
-      operationId: findCasesUsingGET
-      parameters:
-        - name: sampleUnitId
-          in: query
-          description: sampleUnitId (this is an optional query parameter)
-          schema:
-            type: string
-        - name: partyId (this is an optional query parameter)
-          in: query
-          description: partyId
-          schema:
-            type: string
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/CaseDetailsDTO'
-        401:
-          description: Unauthorized
-          content: {}
-        403:
-          description: Forbidden
-          content: {}
-        404:
-          description: Not Found
-          content: {}
   /cases/casegroupid/{casegroupId}:
     get:
       tags:
